compiler-skeleton/tests/parse-error/parse_if.ln
a:bool;
b:bool;
c:int;
d:int;

if c <= d n:int; else


If c <= d n:int; else m:int;

if c <= d 

if c <= d else

if (true) while true if true ; else ; else ;

